Fix footer icon labels and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,8 +183,8 @@ footer {
 
 .social-links i{
     font-size: 3rem;
-    margin: 3rem;
-    /* padding: 0; */
+    margin: 1.5%;
+    padding: 3%;
     color: #3a3a3a;
     transition: 0.3s;
 }
